# common-schema

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
proto/common/: BUILD.bazel  common.proto
proto/delivery/: BUILD.bazel  blender.proto  delivery.proto
proto/event/: BUILD.bazel  event.proto
proto/example/event/: BUILD.bazel  event.proto
proto/mymarket/event/: BUILD.bazel  event.proto  mymarket_event.proto
