load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")

proto_library(
    name = "event_proto",
    srcs = ["event.proto"],
    visibility = ["//visibility:public"],
    deps = [
      "//proto/event:event_proto"
    ],
)

go_proto_library(
    name = "event_go_proto",
    importpath = "github.com/promotedai/common-schema/proto/pangea/event",
    proto = ":event_proto",
    visibility = ["//visibility:public"],
    deps = [
      "//proto/event:go_default_library"
    ],
)

go_library(
    name = "go_default_library",
    embed = [":event_go_proto"],
    importpath = "github.com/promotedai/common-schema/proto/pangea/event",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "event_java_proto",
    deps = [
        ":event_proto",
        "//proto/event:event_proto"
    ],
    visibility = ["//visibility:public"],
)
